--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/knex": "^0.16.1",
-    "@types/uuid": "^8.3.4"
+    "@types/uuid": "^8.3.4",
+    "mysql": "^2.18.1"
   }
 }
