--- a/package.json
+++ b/package.json
@@ -4,19 +4,33 @@
   "description": "Oslash assignment for backend (Oslash Clone)",
   "main": "app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest -w",
+    "start": "ndoemon index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-typescript": "^7.17.12",
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/express-validator": "^3.0.0",
+    "@types/jest": "^27.5.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/knex": "^0.16.1",
+    "@types/nodemon": "^1.19.1",
     "@types/uuid": "^8.3.4",
-    "mysql": "^2.18.1"
+    "babel-jest": "^28.1.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
+    "supertest": "^6.2.3",
+    "typescript": "^4.7.2",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/supertest": "^2.0.12"
   }
 }
