--- a/package.json
+++ b/package.json
@@ -21,12 +21,18 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/knex": "^0.16.1",
     "@types/nodemon": "^1.19.1",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "babel-jest": "^28.1.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
+    "knex": "^2.1.0",
     "mysql": "^2.18.1",
     "supertest": "^6.2.3",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0",
     "typescript": "^4.7.2",
     "uuid": "^8.3.2"
   },
