--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.ts",
   "scripts": {
     "test": "jest -w",
-    "start": "ndoemon index.ts"
+    "start": "nodemon index.ts",
+    "knex": "./node_modules/.bin/knex --knexfile ./database/knexfil.ts"
   },
   "author": "",
   "license": "ISC",
@@ -30,6 +31,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.1.0",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.16",
     "supertest": "^6.2.3",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.4.0",
