logout api, test case for logout api and userAuthtication middleware to check user state

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 JWT_SECRET=kjdbdkjhdkjhdjkdhkdhkjh447487dmnbdjkhdkh@$$dkjhdkhdk
+DB_HOST=dev.cyt6yq1csgd5.ap-south-1.rds.amazonaws.com
+DB_USER=admin
+DB_PASSWORD=oslashdevdb
+DB_DATABASE=dev
