--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^27.5.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/knex": "^0.16.1",
+    "@types/mysql": "^2.15.21",
     "@types/nodemon": "^1.19.1",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
